--- a/intRo1 basics.Rmd
+++ b/intRo1 basics.Rmd
@@ -70,7 +70,7 @@ pi * 5.7 ^2
 To add a new chunk, you click on the toolbar: Code -> Insert Chunk.
 
 *Exercise*
-Add a new chunk in the space below, and use it to calculate the area of a rectangle of length 3.1 and width 7.5.
+Add a new chunk in the space below, and use it to calculate the area of a rectangle of length 3.1 cm and width 7.5 cm (multiply).
 
 
 
@@ -103,7 +103,7 @@ radius
 From now, you can use the object "radius" in the rest of your code, and R will know what you mean.
 
 *Exercise*
-Calculate the diameter of a circle of radius 5.7, without typing 5.7.
+Calculate the circumference of a circle of radius 5.7, without typing 5.7 (Formula: twice the radius times pi)
 ```{r}
 
 ```
@@ -135,14 +135,14 @@ Create a new chunk below, and use it to calculate the square root of 5.7, withou
 
 # Datasets
 
-Some sample datasets are available in R. Let's import "women", a small dataset containing the heights and weights of 15 women, into our Environment.
+Some sample datasets are available in R. Let's import "women", a small dataset containing the heights and weights of 15 women, into our Environment. (It's a default R dataset, so R already knows what it is)
 
 ```{r}
 women <- women
 ```
 
 *Exercise*
-Import "chickwts", a dataset containing information on chicken feeds and weights.
+Import "chickwts", another default dataset containing information on chicken feeds and weights.
 ```{r}
 
 ```
@@ -166,7 +166,7 @@ sd(women$height)
 
 *Exercise*
 1. Calculate the `median` weight among `chickens`, and convert it from grams into kilograms
-2. Use the function table() to tabulate the types of chicken feeds.
+2. Use the function table() to tabulate the types of chicken feeds. This function can use the same syntax as the functions above.
 ```{r}
 # Median chicken weight (in kg)
 
@@ -177,8 +177,8 @@ sd(women$height)
 ```
 
 *Recap exercise*
-Use the women dataset and calculate the mean BMI. There are a few ways of coding this and the choice is yours :)
-(BMI = weight in kg divided by squared height in m; 1 lb = 0.453592 kg, 1 in = 0.0254 m)
+Use the women dataset and calculate the mean height in metres. There are a few ways of coding this and the choice is yours :)
+(1 inch = 0.0254 m)
 
 -------------------------------------------------------------------------------
 
@@ -190,14 +190,18 @@ median(chickwts$weight) * 0.001
 table(chickwts$feed)
 
 # Recap exercise
-# Multiple ways of doing this
-# Option 1
-weight <- mean(women$weight) * 0.453592
-height  <- mean(women$height) * 0.0254
-bmi <- weight / height ^ 2
-bmi
-# Option 2
-(mean(women$weight) * 0.453592) / (mean(women$height) * 0.0254) ^ 2
+women$height                  #  To check in which unit was height measured
+
+# Multiple ways of doing this calculation
+# Option 1: all in one line
+mean(women$height) * 0.0254
+
+# Option 2: break it down
+mean_in <- mean(women$height) # calculate the mean height in inches and assign this
+
+mean_mt <- mean_in * 0.0254   # convert into metres and assign this
+
+mean_mt                       # visualise result
 ```
 
 -------------------------------------------------------------------------------
